Bug 156679 - nvda#15264: NVDA keeps saying "file ///C/.../myfile.ods" in LibreOffice Calc
Summary: nvda#15264: NVDA keeps saying "file ///C/.../myfile.ods" in LibreOffice Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2023-08-08 17:01 UTC by Michael Weghorn
Modified: 2023-08-09 05:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2023-08-08 17:01:11 UTC
Copying from the corresponding NVDA bug report because it's actually a LO problem:
https://github.com/nvaccess/nvda/issues/15264

> ### Steps to reproduce:
> 
> Use libreoffice Calc with any saved file, place the cursor on any cell. LibreOffice Calc 7.5 NVDA 2023.1 Windows 10 and 11 (tried on 2 computers) Language : French
> ### Actual behavior:
> 
> NVDA says "file slash slash slash C slash ......... myfile.ods" whenever the mouse is hovering cells (and many other blank spaces in calc)
> ### Expected behavior:
> 
> Just like on Excel, NVDA says what's written in the cell and the position
> ### NVDA logs, crash dumps and other attachments:
> ### System configuration
> #### NVDA installed/portable/running from source:
> 
> NVDA installed
> #### NVDA version:
> 
> NVDA 2023.1
> #### Windows version:
> 
> Windows 10 and 11 (tried on 2 computers)
> #### Name and version of other software in use when reproducing the issue:
> 
> LibreOffice Calc 7.5.5.2
> #### Other information about your system:
> 
> Tried fresh install, both LibreOffice and NVDA, and default settings
> ### Other questions
> #### Does the issue still occur after restarting your computer?
> 
> Yes
> #### Have you tried any other versions of NVDA? If so, please report their behaviors.
> 
> No
> #### If NVDA add-ons are disabled, is your problem still occurring?
> 
> No add-on installed
> #### Does the issue still occur after you run the COM Registration Fixing Tool in NVDA's tools menu?
> 
> Yes
Comment 1 Michael Weghorn 2023-08-08 17:05:34 UTC
I can reproduce with current LO git master and NVDA 2023.1, am working on a fix.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 37b72ba4542ca8dc49d0121be995d9253c65d6ba
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded
Comment 2 Michael Weghorn 2023-08-08 19:14:33 UTC
Pending Gerrit changes:

https://gerrit.libreoffice.org/c/core/+/155491
https://gerrit.libreoffice.org/c/core/+/155492
Comment 3 Commit Notification 2023-08-09 04:15:14 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/39302875c27d4cf4246bb7520ed90abcf0af777a

tdf#156679 wina11y: Implement accHitTest via UNO equivalent

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-09 04:15:17 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d1d07992a89ba503f1d457a8f79926063f4d3f9c

tdf#156679 wina11y: Convert screen to local coords as needed

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Weghorn 2023-08-09 05:51:02 UTC
Fixed now. As I mentioned in https://github.com/nvaccess/nvda/issues/15264, cell position is not announced when hovering for me, but that's the same with Excel, so may be the correct behavior.

There's a difference in behavior with Excel, as mentioned in the commit message:

> With this change in place, NVDA now announces the
> text when hovering over the text and mouse tracking
> is enabled in NVDA (which is the case by default).
> Other than with Microsoft Excel, the text is only
> announced when the mouse is actually over the text,
> not over free space in the cell, which might be
> because Excel uses UIA and the UIA equivalent,
> `ITextProvider::RangeFromPoint` [2] shall also return
> the index of the closest character when the point
> itself is not over the actual bounds of any
> character.